--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /web/themes/contrib/
 /web/profiles/contrib/
 /web/libraries/
-
+/vendor/
 # Ignore sensitive information
 /web/sites/*/settings.local.php
 
