--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -2,8 +2,8 @@ FROM php:7.1.2-apache
 
 RUN apt-get update -y && apt-get install -y libpng-dev
 RUN apt-get update && apt-get install -y zlib1g-dev
+RUN apt-get update && apt-get install -y cifs-utils
 RUN docker-php-ext-install pdo pdo_mysql json gd mbstring opcache zip
-
 
 RUN apt-get update && apt-get install --no-install-recommends --assume-yes --quiet ca-certificates curl git && rm -rf /var/lib/apt/lists/*
 RUN curl -Lsf 'https://storage.googleapis.com/golang/go1.8.3.linux-amd64.tar.gz' | tar -C '/usr/local' -xvzf -
@@ -22,3 +22,5 @@ COPY . /var/www/monjin
 COPY .docker/php/vhosts.conf /etc/apache2/sites-available/000-default.conf
 
 RUN chown -R www-data:www-data /var/www/monjin && a2enmod rewrite
+
+# Mount CIFS
